# arrayredox

./: Cargo.toml  README.md  pyproject.toml
doc/articles/: first_true_1d.py  first_true_2d.py
src/: lib.rs
tests/: test_basic.py  test_first_true_1d.py  test_first_true_2d.py
