[package]
name = "arrayredox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "arrayredox"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
numpy = "0.25.0"
wide = "0.7.33"
rayon = "1.10.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3
lto = "fat"
codegen-units = 1

# [build]
# rustflags = ["-C", "target-cpu=native"]
